[gd_scene load_steps=3 format=3 uid="uid://b2bpuluvh07mu"]

[ext_resource type="Script" path="res://Scenes/UI/inv_ui_slot.gd" id="1_o6iym"]
[ext_resource type="Texture2D" uid="uid://bvdn4myxm15en" path="res://assets/UI/Cell_Background.bmp" id="2_mk8k5"]

[node name="Inv_UI_Slot" type="Panel"]
custom_minimum_size = Vector2(60, 60)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("1_o6iym")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(0.937, 0.937)
texture = ExtResource("2_mk8k5")
centered = false

[node name="Amount" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
offset_right = -1.0
grow_horizontal = 0
grow_vertical = 0
text = "99"
horizontal_alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="Item_Texture" type="Sprite2D" parent="CenterContainer/Panel"]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
